add the shared data lock to protect shared data

--- a/Fuwafuwa.Test/Fuwafuwa.Test.csproj
+++ b/Fuwafuwa.Test/Fuwafuwa.Test.csproj
@@ -24,4 +24,8 @@
         <ProjectReference Include="..\Fuwafuwa.Core\Fuwafuwa.Core.csproj"/>
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="TestImplement\ServiceCore\" />
+    </ItemGroup>
+
 </Project>
